<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_rx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/benefit_1" />

    <Button
        android:id="@+id/btn_dental"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_rx"
        android:layout_marginTop="20dp"
        android:text="@string/benefit_2" />

    <Button
        android:id="@+id/btn_vision"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_dental"
        android:layout_marginTop="20dp"
        android:text="@string/benefit_3" />

    <Button
        android:id="@+id/btn_professional"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_vision"
        android:layout_marginTop="20dp"
        android:text="@string/benefit_4" />

    <Button
        android:id="@+id/btn_other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_professional"
        android:layout_marginTop="20dp"
        android:text="@string/benefit_5" />

    <Button
        android:id="@+id/btn_dl_pdf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_other"
        android:layout_marginTop="20dp"
        android:text="@string/dl_pdf" />

</RelativeLayout>
