<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/benefit_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/label"
        android:paddingLeft="10dp"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/amount_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/benefit_title"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/red"
        android:textSize="38dp" />

    <TextView
        android:id="@+id/time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/amount_remaining"
        android:layout_marginLeft="10dp"
        android:text="left until September 2013"
        android:textColor="@color/green"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/transactions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_left"
        android:layout_marginTop="20dp"
        android:background="@color/label"
        android:paddingLeft="10dp"
        android:text="@string/transactions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_add_transaction"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/transactions" >

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


        </TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_add_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_transaction" />

    <Button
        android:id="@+id/btn_find_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/find_provider" />

</RelativeLayout>
